--- a/css/main.css
+++ b/css/main.css
@@ -85,13 +85,15 @@ html, body {
 }
 
 body {
-   background: #19191b;
+<!--   background: #19191b;-->
+   background: #6aa84f;
    font-family: "metropolis-regular", sans-serif;
    font-size: 1.6rem;
    font-style: normal;
    font-weight: normal;
    line-height: 1.875;
-   color: #656565;
+<!--   color: #656565;-->
+   color: #d9ead3;   
    margin: 0;
    padding: 0;
 }
