--- a/css/main.css
+++ b/css/main.css
@@ -85,8 +85,7 @@ html, body {
 }
 
 body {
-   <!--background: #19191b;-->
-   background: #6fa8dc;
+   background: #19191b;
    font-family: "metropolis-regular", sans-serif;
    font-size: 1.6rem;
    font-style: normal;
