--- a/css/main.css
+++ b/css/main.css
@@ -1736,7 +1736,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
    left: 0;
    width: 100%;
    height: 100%;
-   background-color: #151515;
+   <!--background-color: #151515;-->
+   background-color: #79C288;
    opacity: .95;
 }
 
