--- a/css/main.css
+++ b/css/main.css
@@ -2380,7 +2380,8 @@ body.search-is-visible {
  * ## pageheader content
  * ------------------------------------------------------------------- */
 .featured {
-   background-color: #151515;
+   <!--background-color: #151515;-->
+   background-color: #79C288;
    height: 564px;
    position: relative;
 }
