--- a/css/main.css
+++ b/css/main.css
@@ -1722,7 +1722,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
  * ------------------------------------------------------------------- */
 .s-pageheader {
    min-height: 174px;
-   background-image: url(../images/hero-bg.jpg);
+   background-image: url(../Borromean.jpeg);
    background-repeat: no-repeat;
    background-position: center center;
    position: relative;
