--- a/css/main.css
+++ b/css/main.css
@@ -1723,7 +1723,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
  * ------------------------------------------------------------------- */
 .s-pageheader {
    min-height: 174px;
-   background-image: url(../79C288.png);
+   background-image: url(../17304c.png);
    background-repeat: no-repeat;
    background-position: center center;
    position: relative;
